# knot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  helm-ci.yaml  release.yaml
crates/knot-auth/: Cargo.toml
crates/knot-auth/src/: csrf.rs  lib.rs  password.rs  session_token.rs  throttle.rs
crates/knot-config/: Cargo.toml
crates/knot-config/src/: lib.rs
crates/knot-config/tests/: load.rs
crates/knot-crdt/: Cargo.toml
crates/knot-crdt/examples/: board_hydrate.rs
crates/knot-crdt/src/: board_registry.rs  board_room.rs  bus_pg.rs  engine.rs  gc.rs  lib.rs  registry.rs  room.rs  snapshot.rs  writer.rs
crates/knot-crdt/tests/: conformance.rs
crates/knot-docs/: Cargo.toml
crates/knot-docs/src/: acl.rs  cache.rs  lib.rs  listener.rs
crates/knot-docs/tests/: listener_integration.rs
crates/knot-markdown/: Cargo.toml
crates/knot-markdown/src/: from_markdown.rs  lib.rs  schema.rs  tasks.rs  to_markdown.rs
crates/knot-markdown/tests/: round_trip.rs
crates/knot-obs/: Cargo.toml
crates/knot-obs/src/: lib.rs  logging.rs  metrics.rs  tracing.rs
crates/knot-server/: Cargo.toml  build.rs
crates/knot-server/src/: admin.rs  http_error.rs  lib.rs  main.rs  metrics.rs  protocol.rs  room.rs
crates/knot-server/src/auth/: cookies.rs  csrf.rs  mod.rs  require_doc_role.rs  require_session.rs  session_loader.rs
crates/knot-server/src/routes/: health.rs  public.rs
crates/knot-server/src/routes/api/: blobs.rs  boards.rs  comments.rs  docs.rs  export_import.rs  grants.rs  history.rs  markdown.rs  mod.rs  search.rs  shares.rs  tasks.rs  workspace.rs
crates/knot-server/src/routes/auth/: local.rs  mod.rs  oidc.rs  setup.rs
crates/knot-server/tests/: admin_cli_integration.rs  auth_local_integration.rs  auth_password_integration.rs  blobs_integration.rs  comments_integration.rs  convergence.rs  docs_integration.rs  health_integration.rs  history_integration.rs  metrics_integration.rs  middleware_unit.rs  search_integration.rs  shares_integration.rs  smoke.rs  templates_integration.rs  workspace_invite_password_integration.rs
crates/knot-storage/: Cargo.toml
crates/knot-storage/src/: audit.rs  blobs.rs  boards.rs  comments.rs  doc_store.rs  grant_store.rs  invalidations.rs  lexorank.rs  lib.rs  markdown_cache.rs  pool.rs  search.rs  session_store.rs  share_tokens.rs  snapshot_store.rs  tasks.rs  updates_store.rs  user_store.rs  workspace_store.rs
crates/knot-storage/src/blobs/: pg.rs  s3.rs
crates/knot-storage/tests/: boards.rs  documents.rs  grants.rs  markdown_cache.rs  migrations_apply.rs  sessions.rs  tasks.rs  updates.rs  users.rs  workspace_members.rs  workspaces.rs
crates/knot-test-support/: Cargo.toml
crates/knot-test-support/src/: lib.rs
deploy/compose/: dev.yml
deploy/compose/dex/: config.yaml
deploy/compose/toxiproxy/: init.json
deploy/grafana/: README.md  knot.json
deploy/helm/knot/: Chart.yaml  README.md  values.schema.json  values.yaml
docs/: SLO.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-06-01-foundation-spike.md  2026-06-02-auth.md  2026-06-02-crdt-rooms.md  2026-06-02-docs-and-acl.md  2026-06-02-frontend-shell.md  2026-06-02-repo-bootstrap-and-db.md  2026-06-03-blob-runtime-s3.md  2026-06-03-comments.md  2026-06-03-deployment.md  2026-06-03-developer-experience.md  2026-06-03-doc-history.md  2026-06-03-docpage-fix.md  2026-06-03-file-uploads.md  (+13 more)
e2e/: package.json  playwright.config.ts  pnpm-lock.yaml
e2e/flows/: auth.spec.ts  collab.spec.ts  command-palette.spec.ts  comments.spec.ts  docs.spec.ts  editor-toolbar.spec.ts  excalidraw.spec.ts  history.spec.ts  import-export.spec.ts  mobile.spec.ts  oidc.spec.ts  role-gating.spec.ts  share-link.spec.ts  theme.spec.ts  tree-dnd.spec.ts  two-users-converge.spec.ts  ws-reconnect.spec.ts
migrations/: 20260602000001_v0_1_schema.sql  20260603091716_blobs.sql  20260603104826_fts.sql  20260603140829_share_tokens.sql  20260603171347_comments.sql  20260603230844_boards.sql  20260604120000_doc_tasks.sql  20260604202010_doc_tasks_due_at.sql  20260604202904_doc_templates.sql
tools/: schema.json
tools/schemagen/: Cargo.toml
tools/schemagen/src/: main.rs
tools/schemagen/tests/: golden_rs.rs  golden_ts.rs
web/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
web/src/: App.tsx  excalidraw-css.d.ts  main.tsx  routes.tsx
(+108 files in other folders)
