[workspace]
resolver = "2"
members = []

[workspace.package]
edition = "2024"
rust-version = "1.80"
license = "Apache-2.0"
authors = ["Niklas Voss <niklas.voss@gmail.com>"]
repository = "https://github.com/trevex/knot"

[workspace.dependencies]
# Async runtime + utilities
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CRDT
yrs = "0.21"

# Markdown parsing
pulldown-cmark = { version = "0.12", default-features = false }

# Codegen
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
proptest = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
