[package]
name = "knot-config"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
figment.workspace = true
thiserror.workspace = true

[dev-dependencies]
figment = { version = "0.10", features = ["env", "toml", "yaml", "test"] }
