[package]
name = "knot-docs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
knot-storage = { path = "../knot-storage" }
async-trait.workspace = true
moka.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
chrono.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
