[package]
name = "knot-server"
version = "0.0.0"
edition.workspace = true

[lib]
name = "knot_server"
path = "src/lib.rs"

[[bin]]
name = "knot-server"
path = "src/main.rs"

[dependencies]
knot-crdt = { path = "../knot-crdt" }
knot-markdown = { path = "../knot-markdown" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
futures = "0.3"
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.24"
futures-util = "0.3"
yrs.workspace = true
