[package]
name = "knot-storage"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
sqlx.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
sha2.workspace = true
ipnetwork.workspace = true
metrics.workspace = true
rust-s3 = { version = "0.36", default-features = false, features = ["tokio-rustls-tls"] }

[dev-dependencies]
knot-test-support = { path = "../knot-test-support" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
