[package]
name = "schemagen"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "schemagen"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
